Add basic USB device logging
The log is available on the chrome://device-log WebUI.

The logging depends on the WebUSB feature and it is disabled by default.
Use --enable-features=WebUSB to enable it.

Change-Id: Idcbdfa42db3b5a5851abbd3e8d877d69c2d9796a
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -173,6 +173,7 @@ foreach(config ${configs})
             web_engine_library_info.cpp web_engine_library_info.h
             web_engine_settings.cpp web_engine_settings.h
             web_event_factory.cpp web_event_factory.h
+            web_usb_detector_qt.cpp web_usb_detector_qt.h
     )
 
     extend_gn_target(${buildGn} CONDITION QT_FEATURE_webengine_ozone_x11
