Adaptations for Chromium 88
Change-Id: Ie66e95dbb9fbcafe961bb98d5c277f8c32d66b96
Reviewed-by: Jüri Valdmann <juri.valdmann@qt.io>

--- a/src/buildtools/configure.json
+++ b/src/buildtools/configure.json
@@ -238,8 +238,7 @@
             },
             "headers": [ "vpx/vpx_encoder.h", "vpx/vp8cx.h", "vpx/vpx_image.h" ],
             "sources": [
-                { "type": "pkgConfig", "args": "vpx" },
-                "-lvpx"
+                { "type": "pkgConfig", "args": "vpx >= 1.10.0" }
             ]
         }
     },
