Refactor and create gn target
Refactor the gn handling and add:
* the gn target for encapsulating resources needed to
run chromium builds
* the support for SOURCES, INCLUDES, DEFINES, COMPILE OPTIONS.
* the multi config support for cmake and enable debug,
release builds
* CONDITION evaluation for the gn target and the gn arg list
* the linux specific config and all missing source sets
* use REALPATH instead of ABSOLUTE, this fixes missing
drive letter on windows

Task-number: QTBUG-91760
Change-Id: Ib283d8ab817ff36ee9c94c2b8f44785709c45258
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/src/process/CMakeLists.txt
+++ b/src/process/CMakeLists.txt
@@ -1,3 +1,8 @@
+if(NOT DEFINED WEBENGINE_ROOT_SOURCE_DIR)
+    get_filename_component(WEBENGINE_ROOT_SOURCE_DIR "${CMAKE_CURRENT_LIST_DIR}/../.." REALPATH)
+endif()
+include(${WEBENGINE_ROOT_SOURCE_DIR}/cmake/Functions.cmake)
+
 find_package(Qt6 COMPONENTS Gui)
 
 get_target_property(qtWebEngineProcessName WebEngineCore QTWEBENGINEPROCESS_NAME)
@@ -14,7 +19,11 @@ target_link_libraries(${qtWebEngineProcessName}
 )
 
 target_include_directories(${qtWebEngineProcessName} PRIVATE ../core)
+get_install_config(config)
 
-install(TARGETS ${qtWebEngineProcessName} RUNTIME DESTINATION "${INSTALL_LIBEXECDIR}")
+install(TARGETS ${qtWebEngineProcessName}
+     RUNTIME DESTINATION "${INSTALL_LIBEXECDIR}"
+     CONFIGURATIONS ${config}
+)
 
 make_install_only(${qtWebEngineProcessName})
