Add mac builds to cmake
We need to pass -F or -iframework to gn as a compiler flag, however
cmake keeps this parameter as include dir and adds internally
"-iframework QtFoo.framework/.." for the compiler call. This internal
handling can not be accessed with the genex. Add the manual conversion.

Task-number: QTBUG-91760
Change-Id: Id12831432ccb0516be52f79bd5f6cfcbe7e87d9c
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -163,10 +163,12 @@ if(NOT Ninja_FOUND)
     externalproject_add_stepdependencies(gn install ninja)
 endif()
 
-# install resources (again), coin calls install with DESTDIR
-install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/translations/qtwebengine_locales
-    DESTINATION ${CMAKE_INSTALL_PREFIX}/translations
-)
-install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/resources
-    DESTINATION ${CMAKE_INSTALL_PREFIX}
-)
+if(NOT QT_FEATURE_framework)
+    # install resources (again), coin calls install with DESTDIR
+    install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/translations/qtwebengine_locales
+        DESTINATION ${CMAKE_INSTALL_PREFIX}/translations
+    )
+    install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/resources
+        DESTINATION ${CMAKE_INSTALL_PREFIX}
+    )
+endif()
