--- a/src/process/CMakeLists.txt
+++ b/src/process/CMakeLists.txt
@@ -6,6 +6,7 @@ include(${WEBENGINE_ROOT_SOURCE_DIR}/cmake/Functions.cmake)
 find_package(Qt6 COMPONENTS Gui)
 
 get_target_property(qtWebEngineProcessName WebEngineCore QTWEBENGINEPROCESS_NAME)
+get_target_property(isFramework WebEngineCore FRAMEWORK)
 
 qt_internal_add_executable(${qtWebEngineProcessName} SOURCES main.cpp)
 
@@ -21,9 +22,27 @@ target_link_libraries(${qtWebEngineProcessName}
 target_include_directories(${qtWebEngineProcessName} PRIVATE ../core)
 get_install_config(config)
 
-install(TARGETS ${qtWebEngineProcessName}
-     RUNTIME DESTINATION "${INSTALL_LIBEXECDIR}"
-     CONFIGURATIONS ${config}
-)
+if(isFramework)
+    set_target_properties(${qtWebEngineProcessName} PROPERTIES MACOSX_BUNDLE TRUE)
+    target_sources(${qtWebEngineProcessName} PRIVATE QtWebEngineProcess.entitlements)
+    set_source_files_properties(QtWebEngineProcess.entitlements PROPERTIES
+        MACOSX_PACKAGE_LOCATION Resources
+    )
+    add_custom_command(TARGET ${qtWebEngineProcessName} POST_BUILD
+          COMMAND ${CMAKE_COMMAND} -E make_directory
+              "$<TARGET_BUNDLE_DIR:WebEngineCore>/Versions/A/Helpers/${qtWebEngineProcessName}.app"
+          COMMAND ${CMAKE_COMMAND} -E create_symlink "Versions/Current/Helpers"
+              "$<TARGET_BUNDLE_DIR:WebEngineCore>/Helpers"
+    )
+    install(TARGETS ${qtWebEngineProcessName}
+        BUNDLE DESTINATION ./lib/QtWebEngineCore.framework/Versions/A/Helpers
+        COMPONENT Runtime
+    )
+else()
+    install(TARGETS ${qtWebEngineProcessName}
+        RUNTIME DESTINATION "${INSTALL_LIBEXECDIR}"
+        CONFIGURATIONS ${config}
+    )
+endif()
 
 make_install_only(${qtWebEngineProcessName})
