--- a/coin/module_config.yaml
+++ b/coin/module_config.yaml
@@ -1,4 +1,17 @@
 version: 2
+accept_configuration:
+  condition: property
+  property: features
+  not_contains_value: Disable
+
 instructions:
-  Build: []
-  Test: []
+  Build:
+    - type: EnvironmentVariable
+      variableName: CMAKE_BUILD_TIMEOUT
+      variableValue: "36000"
+    - type: EnvironmentVariable
+      variableName: CMAKE_BUILD_OUTPUT_TIMEOUT
+      variableValue: "3600"
+    - !include "{{qt/qtbase}}/coin_module_build_template_v2.yaml"
+  Test:
+    - !include "{{qt/qtbase}}/coin_module_test_template_v3.yaml"
