Fix build of qmake examples on coin
Coin compiles examples with qmake during cmake build,
unfortunately this fails to have proper includes.
The reason is that during the build qt-cmake creates dummy
mkspecs files even for targets excluded from 'all'.
(targets we use for genex execute). These files later are
sucked by qmake instead of installed pri files since the
source tree is tainted on coin due to doing in-source builds.

Add a workaround for now and make sure dummy mkspecs are removed.

Task-number: QTBUG-93694
Change-Id: If288809b336055a170baa82b7a75d8e9ae46f988
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -133,6 +133,11 @@ externalproject_add(libs
     BUILD_COMMAND ${CMAKE_COMMAND} -E echo "Starting $<CONFIG> build"
     ${coinBug699}
     COMMAND ${CMAKE_COMMAND} -E echo "$<CONFIG> build complete"
+    # TODO: this is aworkaround for broken qt_lib_webengine*.pri files,
+    # coin does the in-source build and later calls qmake to build examples
+    # and this leftover file gets sucked instead of install or src/mkspecs,
+    # simply remove it, we need to implment a dry run in qt base to fix it.
+    COMMAND ${CMAKE_COMMAND} -E remove_directory ../mkspecs
 )
 
 if(QT_BUILD_EXAMPLES AND BUILD_SHARED_LIBS)
