Fake artifacts on test nodes
If the build node was skip due to missing requirements,
the test node still tries to download artifacts.

Add the workaround for now.

Task-number: COIN-707
Change-Id: Ib5332b6f5af82a77ac2cf702f5be4abf3fb075a0
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,8 @@ if(NOT ${pdfSupport})
 endif()
 
 if(NOT QT_FEATURE_qtwebengine_build AND NOT QT_FEATURE_qtpdf_build)
+    # coin missing artifacts workaround
+    install(FILES coin-bug-707 DESTINATION ${INSTALL_DATADIR})
     return()
 endif()
 
