Add mock UIDelegates for Quick Controls 2
{Alert, Confirm, Prompt}Dialogs are added to Controls2Delegates.
javaScriptDialogs auto test now works with Quick Controls 2.

Task-number: QTBUG-93666
Change-Id: I193b6ec3617db8b44a9dfc5534d99bdf8b20a78e
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/tests/auto/quick/qmltests/CMakeLists.txt
+++ b/tests/auto/quick/qmltests/CMakeLists.txt
@@ -56,16 +56,12 @@ if(QT_FEATURE_webengine_testsupport)
         tst_favicon.qml
         tst_faviconDownload.qml
         tst_inputMethod.qml
+        tst_javaScriptDialogs.qml
         tst_linkHovered.qml
         tst_loadFail.qml
         tst_mouseClick.qml
         tst_viewSoure.qml
     )
-#    if(TARGET Qt::QuickControls) #FIXME
-        list(APPEND testList tst_javaScriptDialogs.qml)
-#    else()
-#        message("\n!!! QuickControls target is missing, some tests are not executed !!! FIXME \n")
-#    endif()
 endif()
 
 if(TARGET Qt::QuickControls) #FIXME
