Fix not working certificates on mac > 10.14
From macOS 10.15 onwards there are new security requirements
for TLS server certificates:

https://support.apple.com/en-us/HT210176

Now all certificates without required fields are reported as
NET::ERR_CERT_INVALID and there is no way to 'bypass' this error.

Our test expects ERR_CERT_AUTHORITY_INVALID value,
for which browsers have an visual option to bypass.

'Fix' certificate by adding new required fields:
  * Subject Alternative Name
  * Extended Key Usage

Generate a new certificate chain with two certificates, where the
server certificate has the extension config file in the form of:

[SAN]
subjectAltName=DNS:webengine.qt.io
extendedKeyUsage=serverAuth

Use 2048 bit for private key, otherwise tests fail on ubuntu.

Task-number: QTBUG-91230
Pick-to: 5.15
Change-Id: I81d878cf3cae3e9fcc51bfbf250fba9185ca4b01
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/tests/auto/quick/certificateerror/CMakeLists.txt
+++ b/tests/auto/quick/certificateerror/CMakeLists.txt
@@ -13,8 +13,8 @@ qt_internal_add_test(tst_certificateerror_quick
 )
 
 set(certificateerror_resource_files
-    "resources/cert.pem"
-    "resources/key.pem"
+    "resources/server.pem"
+    "resources/server.key"
     "WebView.qml"
 )
 
