--- a/tests/auto/widgets/CMakeLists.txt
+++ b/tests/auto/widgets/CMakeLists.txt
@@ -1,9 +1,7 @@
-if(NOT boot2qt)
-    add_subdirectory(defaultsurfaceformat)
-    add_subdirectory(qwebenginepage)
-    add_subdirectory(qwebengineprofile)
-    add_subdirectory(qwebengineview)
-endif()
+add_subdirectory(defaultsurfaceformat)
+add_subdirectory(qwebenginepage)
+add_subdirectory(qwebengineprofile)
+add_subdirectory(qwebengineview)
 add_subdirectory(favicon)
 add_subdirectory(loadsignals)
 add_subdirectory(proxy)
@@ -19,7 +17,7 @@ endif()
 if(NOT MACOS)
     add_subdirectory(touchinput)
 endif()
-if(QT_FEATURE_accessibility AND NOT boot2qt)
+if(QT_FEATURE_accessibility)
     add_subdirectory(accessibility)
 endif()
 if(QT_FEATURE_webengine_printing_and_pdf)
