--- a/src/core/configure/BUILD.toolchain.gn.in
+++ b/src/core/configure/BUILD.toolchain.gn.in
@@ -1,6 +1,6 @@
 import("//build/config/sysroot.gni")
 import("//build/toolchain/gcc_toolchain.gni")
-gcc_toolchain("host") {
+gcc_toolchain("@GN_TOOLCHAIN@") {
   cc = "@CMAKE_C_COMPILER@"
   cxx = "@CMAKE_CXX_COMPILER@"
   ld = "@CMAKE_CXX_COMPILER@"
@@ -9,34 +9,8 @@ gcc_toolchain("host") {
   extra_cppflags = ""
   toolchain_args = {
     current_os = "linux"
-    current_cpu = "x64"
-    is_clang = false
-    use_gold = false
-  }
-}
-gcc_toolchain("v8_snapshot") {
-  cc = "@CMAKE_C_COMPILER@"
-  cxx = "@CMAKE_CXX_COMPILER@"
-  ld = "@CMAKE_CXX_COMPILER@"
-  ar = "@CMAKE_AR@"
-  nm = "@CMAKE_NM@"
-  toolchain_args = {
-    current_os = "linux"
-    current_cpu = "x64"
-    v8_current_cpu = "x64"
-    is_clang = false
-    use_gold = false
-  }
- }
-gcc_toolchain("target") {
-  cc = "@CMAKE_C_COMPILER@"
-  cxx = "@CMAKE_CXX_COMPILER@"
-  ld = "@CMAKE_CXX_COMPILER@"
-  ar = "@CMAKE_AR@"
-  nm = "@CMAKE_NM@"
-  toolchain_args = {
-    current_os = "linux"
-    current_cpu = "x64"
+    current_cpu = "@GN_CPU@"
+    v8_current_cpu = "@GN_V8_CPU@"
     is_clang = false
     use_gold = false
   }
