--- a/tests/auto/widgets/proxypac/CMakeLists.txt
+++ b/tests/auto/widgets/proxypac/CMakeLists.txt
@@ -11,7 +11,7 @@ qt_internal_add_test(tst_proxypac_file
 if(WIN32)
     get_filename_component(SOURCE_DIR "${CMAKE_CURRENT_LIST_DIR}" REALPATH)
     set(fileEnvArg "--proxy-pac-url=\"file:///${SOURCE_DIR}/proxy.pac\"")
-elseif(boot2qt)
+elseif(LINUX AND CMAKE_CROSSCOMPILING)
     set(fileEnvArg "--single-process --no-sandbox --proxy-pac-url=\"file://${CMAKE_CURRENT_LIST_DIR}/proxy.pac\"")
 else()
     set(fileEnvArg "--proxy-pac-url=\"file://${CMAKE_CURRENT_LIST_DIR}/proxy.pac\"")
@@ -29,7 +29,7 @@ qt_internal_add_test(tst_proxypac_qrc
         Test::HttpServer
 )
 
-if(boot2qt)
+if(LINUX AND CMAKE_CROSSCOMPILING)
     set(qrcEnvArg "--single-process --no-sandbox --proxy-pac-url=\"qrc:///proxy.pac\"")
 else()
     set(qrcEnvArg "--proxy-pac-url=\"qrc:///proxy.pac\"")
