Add support for top-level configs and developer builds
Guess a toolchain link for top-level builds.

Copy the resources to their final destinations, and search
for the helper process where it is build in this config.

Change-Id: Ie9e829c19d42dddb85df188e48ec269f85268ed4
Reviewed-by: Michal Klocek <michal.klocek@qt.io>

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -681,5 +681,25 @@ else()
         DESTINATION ${WEBENGINE_ROOT_BUILD_DIR}/resources
         CONFIGURATIONS ${config}
     )
+    if(NOT QT_WILL_INSTALL)
+        # TODO: Could we get rid of ALL?
+        add_custom_target(
+                install_resources_${config}
+                ALL
+                DEPENDS ${buildDir}/${config}/QtWebEngineCore.stamp
+                COMMAND ${CMAKE_COMMAND} -E make_directory
+                        ${CMAKE_INSTALL_PREFIX}/resources
+                COMMAND ${CMAKE_COMMAND} -E copy
+                        ${resourceFiles} ${icuFiles}
+                        ${CMAKE_INSTALL_PREFIX}/resources)
+        add_custom_target(
+                install_locales_${config}
+                ALL
+                DEPENDS ${buildDir}/${config}/QtWebEngineCore.stamp
+                COMMAND ${CMAKE_COMMAND} -E make_directory
+                        ${CMAKE_INSTALL_PREFIX}/translations/qtwebengine_locales
+                COMMAND ${CMAKE_COMMAND} -E copy
+                        ${localeFiles}
+                        ${CMAKE_INSTALL_PREFIX}/translations/qtwebengine_locales)
+    endif()
 endif()
-
